fix bottom of content hidden by footer

--- a/src/App.css
+++ b/src/App.css
@@ -43,6 +43,7 @@ label {
 .row {
   display: flex;
   justify-content: space-evenly;
+  padding-bottom: 80px;
 }
 
 .card {
